[project]
name = "ad-openai-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "attrs==26.1.0",
    "azure-core==1.39.0",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.6",
    "colorama==0.4.6",
    "cryptography==46.0.5",
    "dataclasses-json==0.6.7",
    "distro==1.9.0",
    "dotenv==0.9.9",
    "frozenlist==1.8.0",
    "greenlet==3.3.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "idna==3.11",
    "jiter==0.13.0",
    "jsonpatch==1.33",
    "jsonpointer==3.1.1",
    "langchain==1.2.13",
    "langchain-classic==1.0.3",
    "langchain-community==0.4.1",
    "langchain-core==1.2.22",
    "langchain-openai==1.1.12",
    "langchain-text-splitters==1.1.1",
    "langgraph==1.1.3",
    "langgraph-checkpoint==4.0.1",
    "langgraph-prebuilt==1.0.8",
    "langgraph-sdk==0.3.12",
    "langsmith==0.7.22",
    "marshmallow==3.26.2",
    "msal==1.35.1",
    "msal-extensions==1.3.1",
    "multidict==6.7.1",
    "mypy-extensions==1.1.0",
    "numpy==2.4.3",
    "openai==2.29.0",
    "orjson==3.11.7",
    "ormsgpack==1.12.2",
    "packaging==26.0",
    "propcache==0.4.1",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.13.1",
    "pyjwt==2.12.1",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
    "regex==2026.2.28",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.48",
    "tenacity==9.1.4",
    "tiktoken==0.12.0",
    "tqdm==4.67.3",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uuid-utils==0.14.1",
    "xxhash==3.6.0",
    "yarl==1.23.0",
    "zstandard==0.25.0",
]
